# TabICL-MLX

./: .gitignore  README.md  benchmark_moleculeace.py  benchmark_moleculeace_ensemble_rp.py  benchmark_moleculeace_tabpfn.py  benchmark_moleculeace_tabpfn_mlx.py  moleculeace_30_ensemble.csv  moleculeace_results.csv  moleculeace_results_tabpfn_mlx.csv  pyproject.toml
examples/odt_threshold/: 01_reproduce_paper_split.py  02_cv5x5_honest.py  03_plot_pat_walters.py  README.md
examples/odt_threshold/data/: paper_best_hp_ECFP4_gbdt.json  paper_cv_summary.csv  paper_train.csv  paper_val.csv  paper_val_pred_ECFP4_gbdt.csv  threshold_data.csv
examples/odt_threshold/results/: 01_lucky_split_results.csv  02_cv5x5_results.csv  03_summary.csv
tabicl_mlx/: __init__.py  convert.py  embedding.py  encoders.py  interaction.py  layers.py  learning.py  model.py  regressor.py  rope.py  ssmax.py  verify.py
tabpfn_mlx/: __init__.py  bar_distribution.py  convert.py  model.py  regressor.py  regressor_native.py
